--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,33 +1,5 @@
-/* div {
-    box-sizing: border-box;
-} */
-
-footer {
-    text-align: center;
-}
-
-.search-input {
-    margin: 0 0.5em;
-    border-radius: 0.25em;
-    box-shadow: none;
-    border: thin solid #000;
-    padding: 0 0.5em;
-    width: 10em;
-}
-
-.project-view-buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 1em;
-}
-
-.project-view-buttons button {
-    margin-right: 0.25em;
-}
-
 button {
-    border-radius: 0.5em;
+    border-radius: 0.35em;
     border: 0;
     padding: 0.25em 0.75em;
     /* outline: none */
@@ -37,10 +9,14 @@ button:active {
     background-color: #bcbcbc;
 }
 
-/* 
-button:focus {
-    border: 1px solid #999999;
-} */
+.search-input {
+    margin: 0 0.5em;
+    border-radius: 0.25em;
+    box-shadow: none;
+    border: thin solid #000;
+    padding: 0.25em 0.5em;
+    width: 12em;
+}
 
 .close-button {
     border-radius: 0.4em;
@@ -69,4 +45,43 @@ button:focus {
     width: 100%;
     margin: 0;
     padding: 0;
+}
+
+.project-view-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 1em;
+}
+
+.project-view-buttons button {
+    margin-right: 0.25em;
+}
+
+.list-container {
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
+}
+
+.list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+}
+
+.list-item {
+    background-color: #EAEAEA;
+    background-size: cover;
+    /* background-position: center; */
+    border-radius: 0.25em;
+    margin: 1%;
+    overflow: hidden;
+    height: 18vw;
+    padding: 1em;
+    width: 31%;     
+}
+
+footer {
+    text-align: center;
 }
